updates to mini nav

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -71,6 +71,7 @@
         },
 		"ACCOUNT": {
 			"CREATE": {
+				"NAV_TEXT": "Add New Account",
 				"HEADER": "Add new account",
 				"ACCT_NAME_LABEL": "Account Name:",
 				"ACCT_NAME_PLACEHOLDER": "Account Name",
